--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
