--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,18 +1,17 @@
 version: '3.9'
 
 services:
-  db:
+  database:
     image: postgres:17
     container_name: site_cpt_postgres
-    restart: always
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: site_cpt
     ports:
       - '5432:5432'
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
-  pgdata:
+  postgres_data:
