--- a/backend/package.json
+++ b/backend/package.json
@@ -1,41 +1,39 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "<p align=\"center\">\r   <a href=\"http://nestjs.com/\" target=\"blank\"><img src=\"https://nestjs.com/img/logo-small.svg\" width=\"120\" alt=\"Nest Logo\" /></a>\r </p>",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
+  "private": true,
+  "type": "commonjs",
+  "main": "dist/main.js",
+  "scripts": {
+    "dev": "nest start --watch",
+    "build": "nest build",
+    "start": "node dist/main.js",
+    "test": "jest"
   },
   "dependencies": {
     "@knaadh/nestjs-drizzle-pg": "^1.2.0",
+    "@nestjs/common": "^11.1.10",
     "@nestjs/config": "^4.0.2",
-    "drizzle-kit": "^0.31.8",
+    "@nestjs/core": "^11.1.10",
     "drizzle-orm": "^0.45.1",
+    "nestjs-zod": "^5.0.1",
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.5.0",
-    "pg": "^8.16.3",
+    "jest": "^30.2.0",
     "prettier": "^3.7.4",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.1"
-  },
-  "devDependencies": {
-    "jest": "^30.2.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+    "typescript": "^5.9.3"
+  }
 }
