--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@nestjs/common": "^11.1.10",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.10",
+    "@nestjs/platform-express": "^11.1.11",
     "drizzle-orm": "^0.45.1",
     "nestjs-zod": "^5.0.1",
     "pg": "^8.16.3",
@@ -22,6 +23,7 @@
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@nestjs/cli": "^11.0.14",
     "@nestjs/testing": "^11.1.10",
     "@types/jest": "^30.0.0",
     "drizzle-kit": "^0.31.8",
