--- a/turbo.json
+++ b/turbo.json
@@ -1,11 +1,16 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
+    "dev": {
+      "outputs": [],
+      "dependsOn": []
+    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
     },
-    "lint": {},
-    "test": {}
+    "lint": {
+      "outputs": []
+    }
   }
 }
